# ai-chatbot-demo

./: azure.yaml  pyproject.toml  requirements.txt
src/ai_chat/: __init__.py  broker.py
src/ai_chat/scripts/: open_ai.py
src/ai_chat/templates/: index.html
